<resources>
    <string name="app_name">Think Negative</string>

    <string name="hint_what">Was ist passiert?!\n Lass es raus, schreib es einfach auf.\n</string>
    <string name="save_button">Speichern</string>
    <string name="skip">Skip</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Einstellungen</string>
    <string name="nav_imprint">Impressum</string>
    <string name="to_calendar">Übersicht</string>
    <string name="nav_header_content">HEADER</string>

    <!-- -->
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="nav_home">Home</string>
    <string name="nav_test1">Test1</string>
    <string name="fm_intro1_title">Think Negative!</string>
    <string name="fm_intro1_body">Schluss mit \"Es könnte schlimmer sein\", \"Stell dich nicht so an\" und \"Du musst das positiv sehen\"! \n\n Lass deine schlechten Gefühle einfach raus, diese App versteht dich.\n\nWas auch immer dich nervt, schreib es auf und speicher deine Laune. Wenns passt, mach meinetwegen auch noch ein Foto\n</string>
    <string name="fm_intro2_title">Mir geht\'s scheiße, was soll ich mit dieser blöden App?!</string>
    <string name="long_description_here"> Wenn du dir irgendwann alles anschauen willst, was dich so alles runterzieht, geh in die Übersicht und wälz dich in Selbstmitleid</string>
    <string name="think_negative">Think Negative!</string>
    <string name="nav_header_question">Heute schon gegrantelt?</string>
    <string name="description_take_photo_field">Takes a photo</string>
    <string name="cow_description">Blöde Kuh!</string>
    <string name="explosion_description">Boom!</string>
    <string name="penguin_description">:(</string>
    <string name="shit_description">Kacke!</string>
    <string name="unicorn_description">too sweet</string>
    <string name="bat_description">Grrrr!</string>

    <!--Strings Impressum-->
    <string name="impressum">Impressum</string>
    <string name="impressum_idea">Idee:\nMinh Duc Lam, Daniela Krapf, Anne Köthke</string>
    <string name="design_idea">Design Emoticons:\nDaniela Krapf</string>
    <string name="impressum_coding">Coding:\ndas Team</string>
    <string name="impressum_datenbank">Datenbank:\nAnne Köthke</string>
    <string name="impressum_info">Verwendung der App auf eigene Verantwortung\. Es wird keine Haftung für jegliche psychische Schäden übernommen\.\n\nRegensburg 2017</string>
    <string name="headline_slide3">Erst machen, dann fragen...</string>
    <string name="text_slide3">...funktioniert hier leider nicht. Gib uns erst die Erlaubnis für  DEINE KAMERA DEN SPEICHER DEINES HANDYS  Danach kanns losgehen</string>
    <string name="headline_slide4">Auf eine schlechte Zeit!</string>
    <string name="addNewEntry">Granteln!</string>
</resources>
