<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    >

    <TextView
        android:id="@+id/imprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/impressum"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Title" />

    <TextView
        android:id="@+id/idea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imprint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:text="@string/impressum_idea"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/design_emote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coding"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/design_idea"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/coding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/impressum_coding"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:padding="10dp"
        android:layout_below="@+id/idea"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/etc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/database"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/impressum_info"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/design_emote"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/impressum_datenbank"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />


</RelativeLayout>