<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:fab="http://schemas.android.com/apk/res-auto"
                android:layout_marginTop="?attr/actionBarSize"
                android:background="@color/WhiteSmoke"
                android:orientation="vertical"
                android:id="@+id/fm_home_layout"
                android:weightSum="1">

        <!-- https://www.youtube.com/watch?v=bmeSXhAtDDk  (set title)-->

        <!--https://developer.android.com/training/appbar/setting-up.html
            Für die Initialisierung der Toolbar in der Activity-->

    <!-- includes the frame layout, with photo, date and text inputfield  -->
    <include layout="@layout/fragment_home_image_and_text"/>

    <!--Source: https://github.com/Clans/FloatingActionButton, adapted-->
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        fab:menu_animationDelayPerItem="50"
        fab:menu_backgroundColor="#CCFFFFFF"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/SeaBlue"
        fab:menu_colorPressed="@color/MetallicSeaweed"
        fab:menu_colorRipple="@color/MetallicSeaweed"
        fab:menu_fab_hide_animation="@anim/hide_to_bottom"
        fab:menu_fab_label="Close"
        fab:menu_fab_show_animation="@anim/show_from_bottom"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_mood_cow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_kuh_round"
            fab:fab_colorNormal="@color/MetallicSeaweed"
            fab:fab_label="@string/cow_description"
            fab:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_mood_explode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_atompilz_round"
            fab:fab_colorNormal="@color/MetallicSeaweed"
            fab:fab_label="@string/explosion_description"
            fab:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_mood_sad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_pinguin_round"
            fab:fab_colorNormal="@color/MetallicSeaweed"
            fab:fab_label="@string/penguin_description"
            fab:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_mood_shit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_haufen_round"
            fab:fab_colorNormal="@color/MetallicSeaweed"
            fab:fab_label="@string/shit_description"
            fab:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_mood_unicorn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_unicorn_round"
            fab:fab_colorNormal="@color/MetallicSeaweed"
            fab:fab_label="@string/unicorn_description"
            fab:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_mood_angry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_bat_round"
            fab:fab_colorNormal="@color/MetallicSeaweed"
            fab:fab_label="@string/bat_description"
            fab:fab_size="normal"/>

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>